fix link image overflow issue

--- a/client/templates/links/links.import.less
+++ b/client/templates/links/links.import.less
@@ -14,9 +14,15 @@
           color: #475669;
         }
         .g-box1 {
+        	padding-top: percentage(113/233);
+        	overflow: hidden;
+        	height: 0;
+        	position: relative;
           img {
+          	position: absolute;
             width: 100%;
-            height: percentage(113/233);
+            height: 100%;
+            top: 0;
           }
         }
       }
